--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@
 #experience-part{
     background: url(../images/exp-bg.png) no-repeat;
     margin-top: 60px;
-    margin-bottom: 60px;
+    margin-bottom: 100px;
 }
 
 #experience-part .title{
@@ -230,3 +230,13 @@
 
 
 
+footer{
+    text-align: center;
+    margin: 10px 0;
+}
+
+footer p{
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+    font-weight: 300;
+}
